Fix scoreboard word wrap on small screens

--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -6,6 +6,7 @@
 .score-card {
   display: flex;
   flex: 1 0 100px;
+  max-width: calc(50% - 2rem);
   justify-content: center;
   align-items: center;
   font-weight: bold;
@@ -21,7 +22,12 @@
   color: var(--text-light);
 }
 
+.score-team {
+  max-width: calc(100% - 2rem);
+  word-wrap: break-word;
+}
+
 .score-text {
   font-size: x-large;
-  margin: 0.5rem 1rem;
+  margin: 0.5rem;
 }
